# WarehouseDeliverySystem

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  package.sh
.github/workflows/: build-windows.yml
src/: main.cpp
src/core/: EventManager.cpp  EventManager.h  Scheduler.cpp  Scheduler.h  Simulator.cpp  Simulator.h
src/gui/: ControlBar.cpp  ControlBar.h  EventLogWidget.cpp  EventLogWidget.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  OrdersPanel.cpp  OrdersPanel.h  StatsWidget.cpp  StatsWidget.h  VehiclePanel.cpp  VehiclePanel.h  WarehousePanel.cpp  WarehousePanel.h
src/io/: InputParser.cpp  InputParser.h  OutputWriter.cpp  OutputWriter.h
src/models/: Event.cpp  Event.h  Order.cpp  Order.h  Vehicle.cpp  Vehicle.h  Warehouse.cpp  Warehouse.h
